// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Alert With Dismiss 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="alert alert-success AlertMessage AlertMessage-success"
  >
    <button
      className="close"
      onClick={[Function]}
      type="button"
    >
      ×
    </button>
    <p
      className="AlertMessage__title"
    >
      Default title
    </p>
    Default message
  </div>
</div>
`;

exports[`Storyshots Design System/Alert Without Dismiss 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="alert alert-success AlertMessage AlertMessage-success"
  >
    <p
      className="AlertMessage__title"
    >
      Default title
    </p>
    Default message
  </div>
</div>
`;

exports[`Storyshots Design System/Copy To Clipboard Default 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="CopyToClipboard"
  >
    <span
      className="CopyToClipboard__copy-text"
    >
      Copy me!
    </span>
    <button
      className="btn btn-link btn-link--neutral"
      onClick={[Function]}
      tracking={
        Object {
          "getTrackingData": [Function],
          "trackEvent": [Function],
        }
      }
      type="button"
    >
      <div>
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-copy fa-w-14 "
          data-icon="copy"
          data-prefix="far"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M433.941 65.941l-51.882-51.882A48 48 0 0 0 348.118 0H176c-26.51 0-48 21.49-48 48v48H48c-26.51 0-48 21.49-48 48v320c0 26.51 21.49 48 48 48h224c26.51 0 48-21.49 48-48v-48h80c26.51 0 48-21.49 48-48V99.882a48 48 0 0 0-14.059-33.941zM266 464H54a6 6 0 0 1-6-6V150a6 6 0 0 1 6-6h74v224c0 26.51 21.49 48 48 48h96v42a6 6 0 0 1-6 6zm128-96H182a6 6 0 0 1-6-6V54a6 6 0 0 1 6-6h106v88c0 13.255 10.745 24 24 24h88v202a6 6 0 0 1-6 6zm6-256h-64V48h9.632c1.591 0 3.117.632 4.243 1.757l48.368 48.368a6 6 0 0 1 1.757 4.243V112z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots Design System/Flash Auto Dismiss Flash Message 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="container Flash"
  />
  <div>
    <p>
      Click the button to see a flash message.  Use the knobs to try different types!
    </p>
    <button
      className="btn btn-primary"
      onClick={[Function]}
      type="button"
    >
      Submit
    </button>
  </div>
</div>
`;

exports[`Storyshots Design System/Flash Flash Message 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="container Flash"
  />
  <div>
    <p>
      Click the button to see a flash message.  Use the knobs to try different types!
    </p>
    <button
      className="btn btn-primary"
      onClick={[Function]}
      type="button"
    >
      Submit
    </button>
  </div>
</div>
`;

exports[`Storyshots Design System/Form Default 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <form
    className="Form"
    id="form"
    onSubmit={[Function]}
  >
    <div
      className="FormGroup"
      id="first-name"
    >
      <label
        className="InputLabel"
        htmlFor="first-name"
      >
        First name
      </label>
      <div
        className="Input input-group"
      >
        <input
          className="Input form-control"
          disabled={false}
          id="first-name-input"
          name="first-name"
          onChange={[Function]}
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="FormGroup"
      id="last-name"
    >
      <label
        className="InputLabel"
        htmlFor="last-name"
      >
        Last name
        <span
          className="InputLabel__helper-text"
        >
           (Required)
        </span>
      </label>
      <div
        className="Input input-group"
      >
        <input
          className="Input form-control"
          disabled={false}
          id="last-name-input"
          name="last-name"
          onChange={[Function]}
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="FormGroup"
      id="email"
    >
      <label
        className="InputLabel"
        htmlFor="email"
      >
        Email
      </label>
      <div
        className="Input input-group"
      >
        <input
          className="Input form-control"
          disabled={false}
          id="email-input"
          name="email"
          onChange={[Function]}
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="FormGroup FormGroup--is-invalid"
      id="phone"
    >
      <label
        className="InputLabel"
        htmlFor="phone"
      >
        Phone
        <span
          className="InputLabel__helper-text"
        >
           (Required)
        </span>
      </label>
      <div
        className="Input input-group"
      >
        <input
          className="Input form-control"
          disabled={false}
          id="phone-input"
          name="phone"
          onChange={[Function]}
          placeholder=""
          type="text"
          value=""
        />
      </div>
      <div
        className="FormGroup__invalid-feedback"
      >
        Invalid phone number
      </div>
    </div>
    <div
      className="RadioButtonGroup"
      name="radio-buttons"
    >
      <label
        className="RadioButton"
      >
        <input
          className="RadioButton__input"
          disabled={false}
          id="first-radio"
          name="radio-buttons"
          type="radio"
        />
        <span
          className="RadioButton__label"
        >
          first choice
        </span>
      </label>
      <label
        className="RadioButton"
      >
        <input
          className="RadioButton__input"
          disabled={false}
          id="second-radio"
          name="radio-buttons"
          type="radio"
        />
        <span
          className="RadioButton__label"
        >
          second choice
        </span>
      </label>
    </div>
    <button
      className="btn btn-primary"
      type="submit"
    >
      Save
    </button>
  </form>
</div>
`;

exports[`Storyshots Design System/Form Elements/Form Control Label Checkbox 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <label
    className="FormControlLabel"
    htmlFor="checkbox"
  >
    <span
      className="FormControlLabel__control"
    >
      <input
        id="checkbox"
        name="checkbox"
        type="checkbox"
      />
    </span>
    Labeled checkbox
  </label>
</div>
`;

exports[`Storyshots Design System/Form Elements/Form Group Default 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="FormGroup"
    id="default"
  >
    
    <div
      className="Input input-group"
    >
      <input
        className="Input form-control"
        disabled={false}
        id="default-input"
        name="default"
        onChange={[Function]}
        placeholder="default"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Form Elements/Form Group Required 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="FormGroup"
    id="with-required"
  >
    <label
      className="InputLabel"
      htmlFor=""
    >
      Form Group with label
      <span
        className="InputLabel__helper-text"
      >
         (Required)
      </span>
    </label>
    <div
      className="Input input-group"
    >
      <input
        className="Input form-control"
        disabled={false}
        id="with-required-input"
        name="required"
        onChange={[Function]}
        placeholder="Text is required"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Form Elements/Form Group With Checkbox Button Group 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="FormGroup FormGroup--bordered"
    id="with-checkbox-button-group"
  >
    <label
      className="InputLabel"
      htmlFor="checkbox-button-group"
    >
      Form Group with checkbox button group
      <span
        className="InputLabel__helper-text"
      >
         (
        with some helper text
        )
      </span>
    </label>
    <div
      className="CheckboxButtonGroup"
      id="checkbox-button-group"
    >
      <label
        className="CheckboxButton"
        htmlFor="value-1"
      >
        <input
          checked={false}
          className="CheckboxButton__input"
          id="value-1"
          onChange={[Function]}
          type="checkbox"
          value="1"
        />
        <span
          className="CheckboxButton__label"
        >
          Value 1
        </span>
      </label>
      <label
        className="CheckboxButton"
        htmlFor="value-2"
      >
        <input
          checked={false}
          className="CheckboxButton__input"
          id="value-2"
          onChange={[Function]}
          type="checkbox"
          value="2"
        />
        <span
          className="CheckboxButton__label"
        >
          Value 2
        </span>
      </label>
      <label
        className="CheckboxButton"
        htmlFor="value-3"
      >
        <input
          checked={false}
          className="CheckboxButton__input"
          id="value-3"
          onChange={[Function]}
          type="checkbox"
          value="3"
        />
        <span
          className="CheckboxButton__label"
        >
          Value 3
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Form Elements/Form Group With Errors 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="FormGroup FormGroup--is-invalid"
    id="with-errors"
  >
    <label
      className="InputLabel"
      htmlFor="input"
    >
      Form Group with errors
    </label>
    <div
      className="Input input-group"
    >
      <input
        className="Input form-control"
        disabled={false}
        id="input"
        name="with-errors"
        onChange={[Function]}
        placeholder=""
        type="text"
        value=""
      />
    </div>
    <div
      className="FormGroup__invalid-feedback"
    >
      <ol
        className="FormGroup__invalid-feedback__list"
      >
        <li>
          invalid input!
        </li>
      </ol>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Form Elements/Form Group With Helper Text 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="FormGroup"
    id="with-helper-text"
  >
    <label
      className="InputLabel"
      htmlFor="input"
    >
      Form Group with helper text
    </label>
    <div
      className="Input input-group"
    >
      <input
        className="Input form-control"
        disabled={false}
        id="input"
        name="with-helper-text"
        onChange={[Function]}
        placeholder=""
        type="text"
        value=""
      />
    </div>
    <div
      className="FormGroup__helper-text"
    >
      test helper text
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Form Elements/Form Group With Label 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="FormGroup"
    id="with-label"
  >
    <label
      className="InputLabel"
      htmlFor="input"
    >
      Form Group with label
    </label>
    <div
      className="Input input-group"
    >
      <input
        className="Input form-control"
        disabled={false}
        id="input"
        name="with-label"
        onChange={[Function]}
        placeholder=""
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Form Elements/Form Group With Label Tooltip 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="FormGroup"
    id="with-label"
  >
    <label
      className="InputLabel"
      htmlFor="input"
    >
      Form Group with label and tooltip
      <span
        aria-hidden="true"
        className="Tooltip__icon Tooltip__icon--gray"
        onClick={[Function]}
        onKeyPress={[Function]}
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-question-circle fa-w-16 "
          data-icon="question-circle"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </span>
    </label>
    <div
      className="Input input-group"
    >
      <input
        className="Input form-control"
        disabled={false}
        id="input"
        name="with-label"
        onChange={[Function]}
        placeholder=""
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Form Elements/Form Group With Leading And Trailing Icons 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="FormGroup"
    id="with-trailing-icon"
  >
    <label
      className="InputLabel"
      htmlFor="input"
    >
      Form Group with input leading and trailing icons
    </label>
    <div
      className="Input input-group"
    >
      <div
        className="input-group-prepend"
      >
        <div
          className="input-group-text"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-search fa-w-16 "
            data-icon="search"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
      <input
        className="Input form-control Input--with-leading-icon Input--with-trailing-icon"
        disabled={false}
        id="input"
        name="with-leading-and-trailing-icons"
        onChange={[Function]}
        placeholder=""
        type="text"
        value=""
      />
      <div
        className="input-group-append"
      >
        <div
          className="input-group-text"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-search fa-w-16 "
            data-icon="search"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      className="FormGroup__helper-text"
    >
      with leading and trailing icons
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Form Elements/Form Group With Leading Icon 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="FormGroup"
    id="with-leading-icon"
  >
    <label
      className="InputLabel"
      htmlFor="input"
    >
      Form Group with input leading icon
    </label>
    <div
      className="Input input-group"
    >
      <div
        className="input-group-prepend"
      >
        <div
          className="input-group-text"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-search fa-w-16 "
            data-icon="search"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
      <input
        className="Input form-control Input--with-leading-icon"
        disabled={false}
        id="input"
        name="with-leading-icon"
        onChange={[Function]}
        placeholder=""
        type="text"
        value=""
      />
    </div>
    <div
      className="FormGroup__helper-text"
    >
      with leading icon
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Form Elements/Form Group With Trailing Icon 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="FormGroup"
    id="with-trailing-icon"
  >
    <label
      className="InputLabel"
      htmlFor="input"
    >
      Form Group with input trailing icon
    </label>
    <div
      className="Input input-group"
    >
      <input
        className="Input form-control Input--with-trailing-icon"
        disabled={false}
        id="input"
        name="with-leading-icon"
        onChange={[Function]}
        placeholder=""
        type="text"
        value=""
      />
      <div
        className="input-group-append"
      >
        <div
          className="input-group-text"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-search fa-w-16 "
            data-icon="search"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      className="FormGroup__helper-text"
    >
      with trailing icon
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Form Elements/Radio Button Default 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <label
    className="RadioButton"
  >
    <input
      className="RadioButton__input"
      disabled={false}
      id="default"
      name=""
      type="radio"
    />
    <span
      className="RadioButton__label"
    >
      label
    </span>
  </label>
</div>
`;

exports[`Storyshots Design System/Form Elements/Radio Button With Children 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <label
    className="RadioButton RadioButton--bordered"
  >
    <input
      className="RadioButton__input"
      disabled={false}
      id="default"
      name=""
      type="radio"
    />
    <span
      className="RadioButton__label"
    >
      Option with child
    </span>
    <div
      className="RadioButton__children"
    >
      <span
        style={
          Object {
            "color": "#A1A1A1",
          }
        }
      >
        Some descriptive text for the option above
      </span>
    </div>
  </label>
</div>
`;

exports[`Storyshots Design System/Form Inline 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <form
    className="Form Form--inline"
    id="form"
    onSubmit={[Function]}
  >
    <div
      className="FormGroup"
      id="first-name"
    >
      <label
        className="InputLabel"
        htmlFor="first-name"
      >
        First name
      </label>
      <div
        className="Input input-group"
      >
        <input
          className="Input form-control"
          disabled={false}
          id="first-name-input"
          name="first-name"
          onChange={[Function]}
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="FormGroup"
      id="last-name"
    >
      <label
        className="InputLabel"
        htmlFor="last-name"
      >
        Last name
        <span
          className="InputLabel__helper-text"
        >
           (Required)
        </span>
      </label>
      <div
        className="Input input-group"
      >
        <input
          className="Input form-control"
          disabled={false}
          id="last-name-input"
          name="last-name"
          onChange={[Function]}
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="FormGroup"
      id="description"
    >
      <label
        className="InputLabel"
        htmlFor="description"
      >
        Description
      </label>
      <textarea
        className="form-control"
        id="description"
        type="text"
      />
    </div>
    <button
      className="btn btn-primary"
      type="submit"
    >
      Save
    </button>
  </form>
</div>
`;

exports[`Storyshots Design System/Pill Default 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="Pill"
  >
    Test pill
  </div>
</div>
`;

exports[`Storyshots Design System/Popper Dark 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <p>
    reference element
  </p>
  <div
    className="Popper Popper--dark"
    data-placement="top"
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    Dark Popper
  </div>
</div>
`;

exports[`Storyshots Design System/Popper Default 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <p>
    reference element
  </p>
  <div
    className="Popper"
    data-placement="top"
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    Default Popper
  </div>
</div>
`;

exports[`Storyshots Design System/Selects/Async Default 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="AsyncSelect css-2b097c-container"
    onKeyDown={[Function]}
  >
    <div
      className=" css-qv254q-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className=" css-g1d714-ValueContainer"
      >
        <div
          className=" css-1wa3eu0-placeholder"
        >
          Select...
        </div>
        <div
          className="css-b8ldur-Input"
        >
          <div
            className=""
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            <input
              aria-autocomplete="list"
              aria-label="Async select"
              autoCapitalize="none"
              autoComplete="off"
              autoCorrect="off"
              disabled={false}
              id="react-select-2-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              spellCheck="false"
              style={
                Object {
                  "background": 0,
                  "border": 0,
                  "boxSizing": "content-box",
                  "color": "inherit",
                  "fontSize": "inherit",
                  "label": "input",
                  "opacity": 1,
                  "outline": 0,
                  "padding": 0,
                  "width": "1px",
                }
              }
              tabIndex="0"
              type="text"
              value=""
            />
            <div
              style={
                Object {
                  "height": 0,
                  "left": 0,
                  "overflow": "scroll",
                  "position": "absolute",
                  "top": 0,
                  "visibility": "hidden",
                  "whiteSpace": "pre",
                }
              }
            >
              
            </div>
          </div>
        </div>
      </div>
      <div
        className=" css-1hb7zxy-IndicatorsContainer"
      >
        <span
          className=" css-43ykx9-indicatorSeparator"
        />
        <div
          aria-hidden="true"
          className=" css-tlfecz-indicatorContainer"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <svg
            aria-hidden="true"
            className="css-6q0nyr-Svg"
            focusable="false"
            height={20}
            viewBox="0 0 20 20"
            width={20}
          >
            <path
              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Selects/Async Labeled 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <label
    htmlFor="async-select"
    id="async-label"
  >
    A labeled select
  </label>
  <div
    className="AsyncSelect css-2b097c-container"
    id="async-select"
    onKeyDown={[Function]}
  >
    <div
      className=" css-qv254q-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className=" css-g1d714-ValueContainer"
      >
        <div
          className=" css-1wa3eu0-placeholder"
        >
          Select...
        </div>
        <div
          className="css-b8ldur-Input"
        >
          <div
            className=""
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            <input
              aria-autocomplete="list"
              aria-labelledby="async-label"
              autoCapitalize="none"
              autoComplete="off"
              autoCorrect="off"
              disabled={false}
              id="react-select-3-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              spellCheck="false"
              style={
                Object {
                  "background": 0,
                  "border": 0,
                  "boxSizing": "content-box",
                  "color": "inherit",
                  "fontSize": "inherit",
                  "label": "input",
                  "opacity": 1,
                  "outline": 0,
                  "padding": 0,
                  "width": "1px",
                }
              }
              tabIndex="0"
              type="text"
              value=""
            />
            <div
              style={
                Object {
                  "height": 0,
                  "left": 0,
                  "overflow": "scroll",
                  "position": "absolute",
                  "top": 0,
                  "visibility": "hidden",
                  "whiteSpace": "pre",
                }
              }
            >
              
            </div>
          </div>
        </div>
      </div>
      <div
        className=" css-1hb7zxy-IndicatorsContainer"
      >
        <span
          className=" css-43ykx9-indicatorSeparator"
        />
        <div
          aria-hidden="true"
          className=" css-tlfecz-indicatorContainer"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <svg
            aria-hidden="true"
            className="css-6q0nyr-Svg"
            focusable="false"
            height={20}
            viewBox="0 0 20 20"
            width={20}
          >
            <path
              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Selects/Single Default 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="SingleSelect css-2b097c-container"
    onKeyDown={[Function]}
  >
    <div
      className=" css-qv254q-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className=" css-g1d714-ValueContainer"
      >
        <div
          className=" css-1wa3eu0-placeholder"
        >
          Select...
        </div>
        <input
          aria-autocomplete="list"
          aria-label="Default select"
          className="css-62g3xt-dummyInput"
          disabled={false}
          id="react-select-4-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={true}
          tabIndex="0"
          value=""
        />
      </div>
      <div
        className=" css-1hb7zxy-IndicatorsContainer"
      >
        <span
          className=" css-43ykx9-indicatorSeparator"
        />
        <div
          aria-hidden="true"
          className=" css-tlfecz-indicatorContainer"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <svg
            aria-hidden="true"
            className="css-6q0nyr-Svg"
            focusable="false"
            height={20}
            viewBox="0 0 20 20"
            width={20}
          >
            <path
              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Selects/Single Labeled 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <label
    htmlFor="labeled-select"
    id="select-label"
  >
    Labeled select
  </label>
  <div
    className="SingleSelect css-2b097c-container"
    id="labeled-select"
    onKeyDown={[Function]}
  >
    <div
      className=" css-qv254q-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className=" css-g1d714-ValueContainer"
      >
        <div
          className=" css-1wa3eu0-placeholder"
        >
          Select...
        </div>
        <input
          aria-autocomplete="list"
          aria-labelledby="select-label"
          className="css-62g3xt-dummyInput"
          disabled={false}
          id="react-select-7-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={true}
          tabIndex="0"
          value=""
        />
      </div>
      <div
        className=" css-1hb7zxy-IndicatorsContainer"
      >
        <span
          className=" css-43ykx9-indicatorSeparator"
        />
        <div
          aria-hidden="true"
          className=" css-tlfecz-indicatorContainer"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <svg
            aria-hidden="true"
            className="css-6q0nyr-Svg"
            focusable="false"
            height={20}
            viewBox="0 0 20 20"
            width={20}
          >
            <path
              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Selects/Single Loading 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="SingleSelect css-14jk2my-container"
    onKeyDown={[Function]}
  >
    <div
      className=" css-1wkj6wz-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className=" css-g1d714-ValueContainer"
      >
        <div
          className=" css-1wa3eu0-placeholder"
        >
          Select...
        </div>
        <input
          aria-autocomplete="list"
          aria-label="Loading select"
          className="css-62g3xt-dummyInput"
          disabled={true}
          id="react-select-6-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={true}
          tabIndex="0"
          value=""
        />
      </div>
      <div
        className=" css-1hb7zxy-IndicatorsContainer"
      >
        <span
          className=" css-3igypj-indicatorSeparator"
        />
        <div
          aria-hidden="true"
          className=" css-tlfecz-indicatorContainer"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <svg
            aria-hidden="true"
            className="css-6q0nyr-Svg"
            focusable="false"
            height={20}
            viewBox="0 0 20 20"
            width={20}
          >
            <path
              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Selects/Single Searchable 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="SingleSelect css-2b097c-container"
    onKeyDown={[Function]}
  >
    <div
      className=" css-qv254q-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className=" css-g1d714-ValueContainer"
      >
        <div
          className=" css-1wa3eu0-placeholder"
        >
          Select...
        </div>
        <div
          className="css-b8ldur-Input"
        >
          <div
            className=""
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            <input
              aria-autocomplete="list"
              aria-label="Searchable select"
              autoCapitalize="none"
              autoComplete="off"
              autoCorrect="off"
              disabled={false}
              id="react-select-5-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              spellCheck="false"
              style={
                Object {
                  "background": 0,
                  "border": 0,
                  "boxSizing": "content-box",
                  "color": "inherit",
                  "fontSize": "inherit",
                  "label": "input",
                  "opacity": 1,
                  "outline": 0,
                  "padding": 0,
                  "width": "1px",
                }
              }
              tabIndex="0"
              type="text"
              value=""
            />
            <div
              style={
                Object {
                  "height": 0,
                  "left": 0,
                  "overflow": "scroll",
                  "position": "absolute",
                  "top": 0,
                  "visibility": "hidden",
                  "whiteSpace": "pre",
                }
              }
            >
              
            </div>
          </div>
        </div>
      </div>
      <div
        className=" css-1hb7zxy-IndicatorsContainer"
      >
        <span
          className=" css-43ykx9-indicatorSeparator"
        />
        <div
          aria-hidden="true"
          className=" css-tlfecz-indicatorContainer"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <svg
            aria-hidden="true"
            className="css-6q0nyr-Svg"
            focusable="false"
            height={20}
            viewBox="0 0 20 20"
            width={20}
          >
            <path
              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Styles Typography 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="TypographyRow"
  >
    <div
      className="TypographyRow__Example"
    >
      <div
        className="font-type-70"
      >
        <p>
          The fastest way to recruit research participants
        </p>
        <p
          className="font-type-70--bold"
        >
          The fastest way to recruit research participants
        </p>
        <p
          className="font-type-70--light"
        >
          The fastest way to recruit research participants
        </p>
      </div>
    </div>
    <div
      className="TypographyRow__Specs"
    >
      <ul>
        <li>
          <strong>
            font-type-70
          </strong>
        </li>
        <li>
          Type: 
          Lato, Arial, sans-serif
        </li>
        <li>
          Size: 
          1.5rem
        </li>
        <li>
          Line-height: 
          2rem
        </li>
        <li>
          Weight: 
          400 / Regular
        </li>
      </ul>
      <ul>
        <li>
          <div
            className="Pill Pill--blue Pill--sm"
          >
            font-type-70
          </div>
        </li>
        <li>
          <div
            className="Pill Pill--blue Pill--sm"
          >
            font-type-70--bold
          </div>
        </li>
        <li>
          <div
            className="Pill Pill--blue Pill--sm"
          >
            font-type-70--light
          </div>
        </li>
      </ul>
    </div>
  </div>
  <div
    className="TypographyRow"
  >
    <div
      className="TypographyRow__Example"
    >
      <div
        className="font-type-60"
      >
        <p>
          The fastest way to recruit research participants
        </p>
        <p
          className="font-type-60--bold"
        >
          The fastest way to recruit research participants
        </p>
        <p
          className="font-type-60--light"
        >
          The fastest way to recruit research participants
        </p>
      </div>
    </div>
    <div
      className="TypographyRow__Specs"
    >
      <ul>
        <li>
          <strong>
            font-type-60
          </strong>
        </li>
        <li>
          Type: 
          Lato, Arial, sans-serif
        </li>
        <li>
          Size: 
          1.25rem
        </li>
        <li>
          Line-height: 
          1.625rem
        </li>
        <li>
          Weight: 
          400 / Regular
        </li>
      </ul>
      <ul>
        <li>
          <div
            className="Pill Pill--blue Pill--sm"
          >
            font-type-60
          </div>
        </li>
        <li>
          <div
            className="Pill Pill--blue Pill--sm"
          >
            font-type-60--bold
          </div>
        </li>
        <li>
          <div
            className="Pill Pill--blue Pill--sm"
          >
            font-type-60--light
          </div>
        </li>
      </ul>
    </div>
  </div>
  <div
    className="TypographyRow"
  >
    <div
      className="TypographyRow__Example"
    >
      <div
        className="font-type-50"
      >
        <p>
          The fastest way to recruit research participants
        </p>
        <p
          className="font-type-50--bold"
        >
          The fastest way to recruit research participants
        </p>
        <p
          className="font-type-50--light"
        >
          The fastest way to recruit research participants
        </p>
      </div>
    </div>
    <div
      className="TypographyRow__Specs"
    >
      <ul>
        <li>
          <strong>
            font-type-50
          </strong>
        </li>
        <li>
          Type: 
          Lato, Arial, sans-serif
        </li>
        <li>
          Size: 
          1.125rem
        </li>
        <li>
          Line-height: 
          1.5rem
        </li>
        <li>
          Weight: 
          400 / Regular
        </li>
      </ul>
      <ul>
        <li>
          <div
            className="Pill Pill--blue Pill--sm"
          >
            font-type-50
          </div>
        </li>
        <li>
          <div
            className="Pill Pill--blue Pill--sm"
          >
            font-type-50--bold
          </div>
        </li>
        <li>
          <div
            className="Pill Pill--blue Pill--sm"
          >
            font-type-50--light
          </div>
        </li>
      </ul>
    </div>
  </div>
  <div
    className="TypographyRow"
  >
    <div
      className="TypographyRow__Example"
    >
      <div
        className="font-type-40"
      >
        <p>
          The fastest way to recruit research participants
        </p>
        <p
          className="font-type-40--bold"
        >
          The fastest way to recruit research participants
        </p>
        <p
          className="font-type-40--light"
        >
          The fastest way to recruit research participants
        </p>
      </div>
    </div>
    <div
      className="TypographyRow__Specs"
    >
      <ul>
        <li>
          <strong>
            font-type-40
          </strong>
        </li>
        <li>
          Type: 
          Lato, Arial, sans-serif
        </li>
        <li>
          Size: 
          1rem
        </li>
        <li>
          Line-height: 
          1.375rem
        </li>
        <li>
          Weight: 
          400 / Regular
        </li>
      </ul>
      <ul>
        <li>
          <div
            className="Pill Pill--blue Pill--sm"
          >
            font-type-40
          </div>
        </li>
        <li>
          <div
            className="Pill Pill--blue Pill--sm"
          >
            font-type-40--bold
          </div>
        </li>
        <li>
          <div
            className="Pill Pill--blue Pill--sm"
          >
            font-type-40--light
          </div>
        </li>
      </ul>
    </div>
  </div>
  <div
    className="TypographyRow"
  >
    <div
      className="TypographyRow__Example"
    >
      <div
        className="font-type-30"
      >
        <p>
          The fastest way to recruit research participants
        </p>
        <p
          className="font-type-30--bold"
        >
          The fastest way to recruit research participants
        </p>
        <p
          className="font-type-30--light"
        >
          The fastest way to recruit research participants
        </p>
      </div>
    </div>
    <div
      className="TypographyRow__Specs"
    >
      <ul>
        <li>
          <strong>
            font-type-30
          </strong>
        </li>
        <li>
          Type: 
          Lato, Arial, sans-serif
        </li>
        <li>
          Size: 
          0.875rem
        </li>
        <li>
          Line-height: 
          1.25rem
        </li>
        <li>
          Weight: 
          400 / Regular
        </li>
      </ul>
      <ul>
        <li>
          <div
            className="Pill Pill--blue Pill--sm"
          >
            font-type-30
          </div>
        </li>
        <li>
          <div
            className="Pill Pill--blue Pill--sm"
          >
            font-type-30--bold
          </div>
        </li>
        <li>
          <div
            className="Pill Pill--blue Pill--sm"
          >
            font-type-30--light
          </div>
        </li>
      </ul>
    </div>
  </div>
  <div
    className="TypographyRow"
  >
    <div
      className="TypographyRow__Example"
    >
      <div
        className="font-type-20"
      >
        <p>
          The fastest way to recruit research participants
        </p>
        <p
          className="font-type-20--bold"
        >
          The fastest way to recruit research participants
        </p>
        <p
          className="font-type-20--light"
        >
          The fastest way to recruit research participants
        </p>
      </div>
    </div>
    <div
      className="TypographyRow__Specs"
    >
      <ul>
        <li>
          <strong>
            font-type-20
          </strong>
        </li>
        <li>
          Type: 
          Lato, Arial, sans-serif
        </li>
        <li>
          Size: 
          0.75rem
        </li>
        <li>
          Line-height: 
          1rem
        </li>
        <li>
          Weight: 
          400 / Regular
        </li>
      </ul>
      <ul>
        <li>
          <div
            className="Pill Pill--blue Pill--sm"
          >
            font-type-20
          </div>
        </li>
        <li>
          <div
            className="Pill Pill--blue Pill--sm"
          >
            font-type-20--bold
          </div>
        </li>
        <li>
          <div
            className="Pill Pill--blue Pill--sm"
          >
            font-type-20--light
          </div>
        </li>
      </ul>
    </div>
  </div>
  <div
    className="TypographyRow"
  >
    <div
      className="TypographyRow__Example"
    >
      <div
        className="font-type-10"
      >
        <p>
          The fastest way to recruit research participants
        </p>
        <p
          className="font-type-10--bold"
        >
          The fastest way to recruit research participants
        </p>
        <p
          className="font-type-10--light"
        >
          The fastest way to recruit research participants
        </p>
      </div>
    </div>
    <div
      className="TypographyRow__Specs"
    >
      <ul>
        <li>
          <strong>
            font-type-10
          </strong>
        </li>
        <li>
          Type: 
          Lato, Arial, sans-serif
        </li>
        <li>
          Size: 
          0.625rem
        </li>
        <li>
          Line-height: 
          0.875rem
        </li>
        <li>
          Weight: 
          400 / Regular
        </li>
        <li>
          Text-transform: 
          Uppercase
        </li>
        <li>
          Letter-spacing: 
          0.0625rem
        </li>
      </ul>
      <ul>
        <li>
          <div
            className="Pill Pill--blue Pill--sm"
          >
            font-type-10
          </div>
        </li>
        <li>
          <div
            className="Pill Pill--blue Pill--sm"
          >
            font-type-10--bold
          </div>
        </li>
        <li>
          <div
            className="Pill Pill--blue Pill--sm"
          >
            font-type-10--light
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Styles/Color Palette Blue 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "height": "20rem",
        "width": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "backgroundColor": "#EBF6FF",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxBlue100
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#C9E5FC",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxBlue200
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#92CBFC",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxBlue300
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#5AA4E5",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxBlue400
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#337AB7",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxBlue500
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#155B99",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxBlue600
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#0D4473",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxBlue700
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#083054",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxBlue800
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#032847",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxBlue900
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Styles/Color Palette Gray 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "height": "20rem",
        "width": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "backgroundColor": "#F9F9F9",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxGray100
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#F1F1F1",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxGray200
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#E1E1E1",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxGray300
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#D1D1D1",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxGray400
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#A1A1A1",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxGray500
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#818181",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxGray600
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#616161",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxGray700
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#444444",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxGray800
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#222222",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxGray900
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Styles/Color Palette Green 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "height": "20rem",
        "width": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "backgroundColor": "#F3FFF2",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxGreen100
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#E3FDE0",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxGreen200
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#BFFEB8",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxGreen300
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#85DC7A",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxGreen400
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#6DBD63",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxGreen500
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#47A13B",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxGreen600
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#297021",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxGreen700
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#1A5313",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxGreen800
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#0E4207",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxGreen900
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Styles/Color Palette Orange 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "height": "20rem",
        "width": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "backgroundColor": "#FDEAD2",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxOrange100
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#FCDFB9",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxOrange200
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#FAC988",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxOrange300
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#F7B258",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxOrange400
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#F59C27",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxOrange500
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#E18C28",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxOrange600
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#AE6608",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxOrange700
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#7D4A06",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxOrange800
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#653B05",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxOrange900
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Styles/Color Palette Red 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "height": "20rem",
        "width": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "backgroundColor": "#F0D9D9",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxRed100
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#E8C5CB",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxRed200
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#EB7A7A",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxRed300
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#E44E4E",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxRed400
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#FF4E00",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxRed500
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#C71F1F",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxRed600
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#B11B1B",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxRed700
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#9B1818",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxRed800
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#851414",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxRed900
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Tooltip Default 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <span
    aria-hidden="true"
    className="Tooltip__icon"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-question-circle fa-w-16 "
      data-icon="question-circle"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </span>
</div>
`;

exports[`Storyshots Design System/Tooltip Gray Icon 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <span
    aria-hidden="true"
    className="Tooltip__icon Tooltip__icon--gray"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-question-circle fa-w-16 "
      data-icon="question-circle"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </span>
</div>
`;

exports[`Storyshots Design System/Tooltip Green Icon 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <span
    aria-hidden="true"
    className="Tooltip__icon Tooltip__icon--primary"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-question-circle fa-w-16 "
      data-icon="question-circle"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </span>
</div>
`;

exports[`Storyshots Design System/Tooltip Light 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <span
    aria-hidden="true"
    className="Tooltip__icon"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-question-circle fa-w-16 "
      data-icon="question-circle"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </span>
</div>
`;

exports[`Storyshots Design System/Tooltip With Header 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <span
    aria-hidden="true"
    className="Tooltip__icon"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-question-circle fa-w-16 "
      data-icon="question-circle"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </span>
</div>
`;

exports[`Storyshots Design System/Tooltip With Html 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <span
    aria-hidden="true"
    className="Tooltip__icon"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-question-circle fa-w-16 "
      data-icon="question-circle"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </span>
</div>
`;

exports[`Storyshots Design System/Tooltip With Tracking 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <span
    aria-hidden="true"
    className="Tooltip__icon"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-question-circle fa-w-16 "
      data-icon="question-circle"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </span>
</div>
`;
